--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -15,8 +15,9 @@ jobs:
         with: 
           java-version: 1.8
       - name: Build with Maven 
-        run: maven verify --file pom.xml
+        run: maven package --file pom.xml
   second-docker:
+    needs: [first-build]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
