--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Set up jdk1.8
-        uses: action/setup-java@v1
+        uses: actions/setup-java@v1
         with: 
           java-version: 1.8
       - name: Build with Maven 
