--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -15,7 +15,7 @@ jobs:
         with: 
           java-version: 1.8
       - name: Build with Maven 
-        run: maven package --file pom.xml
+        run: mvn package --file pom.xml
   second-docker:
     needs: [first-build]
     runs-on: ubuntu-latest
