update docker file

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,8 @@
 FROM openjdk:8-jre-alpine
 
-ADD target/configurationserver-0.0.1-SNAPSHOT.jar app.jar
+COPY ../target/configurationserver-1.0.jar /app.jar
 
 EXPOSE 9000
+
 ENTRYPOINT ["java", "-jar", "app.jar"]
 
