--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,10 +3,8 @@ name: Java CI
 on: [push]
 
 jobs:
-  build:
-
+  first:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v1
     - name: Set up JDK 1.8
@@ -14,4 +12,4 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      run: mvn -B verify --file pom.xml
+      run: mvn -B package --file pom.xml
