--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,7 +3,7 @@ name: Java CI
 on: [push]
 
 jobs:
-  first:
+  verify:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
@@ -12,4 +12,14 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B verify --file pom.xml
+  build-image:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+            java-version: 1.8
+      - name: Build with Maven
+        run: mvn jib:build
