--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,5 +15,5 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      run: mvn verify --file pom.xml
+      run: mvn verify -Djib.from.auth.username=$USERNAME -Djib.from.auth.password=$PASSWORD --file pom.xml
 
